--- a/assets/css/starter-template.css
+++ b/assets/css/starter-template.css
@@ -1,11 +1,25 @@
 body {
-  padding-top: 5rem;
+    padding-top: 5rem;
 }
+
 .starter-template {
-  padding: 3rem 1.5rem;
-  text-align: center;
+    padding: 3rem 1.5rem;
+    text-align: center;
 }
 
 .btncursor{
     cursor: pointer;
+}
+
+.table th {
+    text-align: center;   
+}
+
+.footer {
+    position: absolute;
+    bottom: 0;
+    width: 100%;
+    height: 60px;
+    line-height: 60px;
+    background-color: #f5f5f5;
 }
