--- a/views/default-template/login.html
+++ b/views/default-template/login.html
@@ -5,15 +5,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta name="description" content="">
     <meta name="author" content="Roberto Morais">
-    <link rel="icon" href="../favicon.ico">
+    <link rel="icon" href="../../favicon.ico">
 
-    <title>Wookora - Register</title>
+    <title>Wookora - Login</title>
 
     <!-- Bootstrap core CSS -->
-    <link href="../assets/css/bootstrap.min.css" rel="stylesheet">
+    <link href="../../assets/css/bootstrap.min.css" rel="stylesheet">
 
     <!-- Custom styles for this template -->
-    <link href="../assets/css/starter-template.css" rel="stylesheet">
+    <link href="../../assets/css/starter-template.css" rel="stylesheet">
   </head>
 
   <body>
@@ -26,21 +26,27 @@
 
       <div class="collapse navbar-collapse" id="navbarsExampleDefault">
         <ul class="navbar-nav mr-auto col-md-10">
-          <li class="nav-item active">
+          <li class="nav-item">
             <a class="nav-link" href="index.html">Home <span class="sr-only">(current)</span></a>
           </li>
         </ul>
         <ul class="navbar-nav mr-auto col-md-2" id="navLogout">
-          <li class="nav-item">
+          <li class="nav-item active">
             <a class="nav-link" href="login.html">Login</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="register.html">Register</a>
           </li>
         </ul>
-        <ul class="navbar-nav mr-auto col-md-2" id="navLogin" style="display: none;">
+       <ul class="navbar-nav mr-auto col-md-2" id="navLogin">
           <li class="nav-item">
             <a class="nav-link" href="listusers.html">User List</a>
+          </li>
+          <li class="nav-item active">
+            <a class="nav-link" href="convertxml.html">Convert to XML</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#" id="logout">Logout</a>
           </li>
         </ul>
       </div>
@@ -49,15 +55,11 @@
     <div class="container">
 
       <div class="starter-template">
-        <h1>Register</h1>
-        <form id="form" role="form" class="starter-template">
+        <h1>Login</h1>
+        <form id="form" role="form">
             <center>
                 <div class="form-group col-md-6">
-                    <label>Name and Surname</label>
-                    <input id="name" name="name" type="text" class="form-control"/>
-                </div>
-                <div class="form-group col-md-6">
-                    <label>E-mail</label>
+                    <label>Email</label>
                     <input id="email" name="email" type="text" class="form-control"/>
                 </div>
                 <div class="form-group col-md-6">
@@ -65,14 +67,18 @@
                     <input id="password" name="password" type="password" class="form-control"/>
                 </div>
                 <div class="form-group col-md-6">
-                    <button type="submit" class="btn btn-lg btn-primary paddingno sendleft btncursor" data-action="saveuser" id="submit">SAVE</button>
+                    <button type="submit" class="btn btn-lg btn-primary paddingno sendleft" data-action="login" id="submit">LOGIN</button>
                 </div>
             </center>
         </form>
       </div>
 
     </div><!-- /.container -->
-    
+    <footer class="footer">
+        <div class="container">
+            <center><span class="text-muted">Powered by Roberto Morais</span></center>
+        </div>
+    </footer>
     <!-- Modal -->
     <div id="modal" class="modal fade" role="dialog">
       <div class="modal-dialog">
@@ -101,14 +107,14 @@
     <script src="https://code.jquery.com/jquery-3.1.1.slim.min.js" integrity="sha384-A7FZj7v+d/sdmMqp/nOQwliLvUsJfDHW+k9Omg/a/EheAdgtzNs3hpfag6Ed950n" crossorigin="anonymous"></script>
     <!-- Placed at the end of the document so the pages load faster -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
-    <script>window.jQuery || document.write('<script src="../assets/js/vendor/jquery.min.js"><\/script>')</script>
+    <script>window.jQuery || document.write('<script src="../../assets/js/vendor/jquery.min.js"><\/script>')</script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/tether/1.4.0/js/tether.min.js" integrity="sha384-DztdAPBWPRXSA/3eYEEUWrWCy7G5KFbe8fFjk5JAIxUYHKkDx6Qin1DkWx51bBrb" crossorigin="anonymous"></script>
-    <script src="../assets/js/bootstrap.min.js"></script>
+    <script src="../../assets/js/bootstrap.min.js"></script>
     <!-- IE10 viewport hack for Surface/desktop Windows 8 bug -->
-    <script src="../assets/js/ie10-viewport-bug-workaround.js"></script>
+    <script src="../../assets/js/ie10-viewport-bug-workaround.js"></script>
     <!-- Components -->
-    <script src="../bower_components/js-cookie/src/js.cookie.js"></script>
+    <script src="../../bower_components/js-cookie/src/js.cookie.js"></script>
     <!-- CONTROLLER -->
-    <script src="../controllers/register.controller.js"></script>
+    <script src="../../controllers/login.controller.js"></script>
   </body>
 </html>
